
Thu Jan 10 19:36:27 CET 2002 Paolo Molaro <lupus@ximian.com>

	* class.c: fix mono_class_from_mono_type () for szarray types.
	Remove unused cache check in mono_class_from_type_spec().
	* icall.c: *type_from_name () functions handle simple arrays and byref.
	* reflection.c: handle byref and szarray types. Handle methods without
	body (gets P/Invoke compilation working). Handle types and fields in
	get_token ().
	* reflection.h: add rank to MonoTypeInfo.

2002-01-10  Dick Porter  <dick@ximian.com>

	* threads.c: Implemented WaitAll(), WaitAny() and WaitOne()
	internal calls

Wed Jan 9 19:27:13 CET 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: initialize class in type_from_handle ().
	Loop also in parent classes for get_method ().
	* reflection.c: properly encode class and valuetype types.
	Start on encoding TypeBuilder types. Handle fieldrefs.
	Use correct length when registering a user string.
	Handle ConstructorBuilder and MonoMethod in get_token ().
	Make mono_type_get_object () aware of cached types.
	* object.c: back out change to mono_string_new ().

Tue Jan 8 22:47:44 EST 2002 Matt Kimball <matt@kimball.net>
	* object.c: mono_string_new should return a NULL when the string 
	passed in is NULL -- not try to deference it.
	
Sat Jan 5 15:48:04 CET 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: hack to make IsSubType work for TypeBuilders.
	* reflection.c: emit constructors before methods.
	Retrieve param names in mono_param_get_objects().

2002/01/05  Nick Drochak  <ndrochak@gol.com>

	* Makefile.am: fix list of headers and sources so automake 1.5
	doesn't complain. Removed \# at end of list.

Thu Jan 3 23:17:17 CET 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: get token for a method ref. Set return type of
	constructor to void.
	* loader.c: debug message.
	* class.c: typo fix.

Mon Dec 24 17:18:10 CET 2001 Paolo Molaro <lupus@ximian.com>

	* icall.c: fix array init with rank > 1. FindMembers
	loops in parent class as well.